using UnityEngine;

namespace Henmova.Vaibhav
{
    public static class KeyValueNames
    {
        #region -------------------- Keys --------------------
        // Animator Keys
        public const string ANIM_KEY_WALK = "Move";
        public const string ANIM_KEY_RUN = "Run";
        public const string ANIM_KEY_GIVE = "Give";
        public const string ANIM_KEY_Attack = "Attack";

        public const string ANIM_PLAYER_CAM_MOVEMENT = "Movement";
        public const string ANIM_PLAYER_CAM_JUMP_UP =  "Jump Up";
        public const string ANIM_PLAYER_CAM_JUMP_DOWN =  "Jump Down";
        public const string ANIM_PLAYER_CAM_JUMP_DOWN_IMPACT =  "Jump Impact";
        #endregion
        #region ----------- TAGS -----------
        public const string TAG_NPC = "NPC";
        #endregion
    }
}
